bindings/rust/wasmedge-sys/docs/wasmedge.h


enum WasmEdge_ValType {
  WasmEdge_ValType_I32 = 0x7FU,
  WasmEdge_ValType_I64 = 0x7EU,
  WasmEdge_ValType_F32 = 0x7DU,
  WasmEdge_ValType_F64 = 0x7CU,
  WasmEdge_ValType_V128 = 0x7BU,
  WasmEdge_ValType_FuncRef = 0x70U,
  WasmEdge_ValType_ExternRef = 0x6FU
};
enum WasmEdge_RefType {
  WasmEdge_RefType_FuncRef = 0x70U,
  WasmEdge_RefType_ExternRef = 0x6FU
};
typedef struct WasmEdge_Value {
  unsigned __int128 Value;
  enum WasmEdge_ValType Type;
} WasmEdge_Value;
typedef struct WasmEdge_String {
  uint32_t Length;
  const char *Buf;
} WasmEdge_String;
typedef struct WasmEdge_Result {
  uint8_t Code;
} WasmEdge_Result;
#define WasmEdge_Result_Success ((WasmEdge_Result){.Code = 0x00})
typedef struct WasmEdge_Limit {
  bool HasMax;
  uint32_t Min;
  uint32_t Max;
} WasmEdge_Limit;
typedef struct WasmEdge_FunctionTypeContext WasmEdge_FunctionTypeContext;
typedef struct WasmEdge_FunctionInstanceContext
    WasmEdge_FunctionInstanceContext;
typedef struct WasmEdge_HostFunctionContext WasmEdge_HostFunctionContext;
typedef struct WasmEdge_TableInstanceContext WasmEdge_TableInstanceContext;
typedef struct WasmEdge_MemoryInstanceContext WasmEdge_MemoryInstanceContext;
typedef struct WasmEdge_ImportObjectContext WasmEdge_ImportObjectContext;
WASMEDGE_CAPI_EXPORT extern WasmEdge_Value
WasmEdge_ValueGenI32(const int32_t Val);
WASMEDGE_CAPI_EXPORT extern int32_t
WasmEdge_ValueGetI32(const WasmEdge_Value Val);
WASMEDGE_CAPI_EXPORT extern const char *
WasmEdge_ResultGetMessage(const WasmEdge_Result Res);
WASMEDGE_CAPI_EXPORT extern WasmEdge_FunctionTypeContext *
WasmEdge_FunctionTypeCreate(const enum WasmEdge_ValType *ParamList,
                            const uint32_t ParamLen,
                            const enum WasmEdge_ValType *ReturnList,
                            const uint32_t ReturnLen);
WASMEDGE_CAPI_EXPORT extern void
WasmEdge_FunctionTypeDelete(WasmEdge_FunctionTypeContext *Cxt);
WASMEDGE_CAPI_EXPORT extern const WasmEdge_FunctionTypeContext *
WasmEdge_FunctionInstanceGetFunctionType(
    const WasmEdge_FunctionInstanceContext *Cxt);
typedef WasmEdge_Result (*WasmEdge_HostFunc_t)(
    void *Data, WasmEdge_MemoryInstanceContext *MemCxt,
    const WasmEdge_Value *Params, WasmEdge_Value *Returns);
WASMEDGE_CAPI_EXPORT extern WasmEdge_HostFunctionContext *
WasmEdge_HostFunctionCreate(const WasmEdge_FunctionTypeContext *Type,
                            WasmEdge_HostFunc_t HostFunc, const uint64_t Cost);
typedef WasmEdge_Result (*WasmEdge_WrapFunc_t)(
    void *This, void *Data, WasmEdge_MemoryInstanceContext *MemCxt,
    const WasmEdge_Value *Params, const uint32_t ParamLen,
    WasmEdge_Value *Returns, const uint32_t ReturnLen);
WASMEDGE_CAPI_EXPORT extern WasmEdge_HostFunctionContext *
WasmEdge_HostFunctionCreateBinding(const WasmEdge_FunctionTypeContext *Type,
                                   WasmEdge_WrapFunc_t WrapFunc, void *Binding,
                                   const uint64_t Cost);
WASMEDGE_CAPI_EXPORT extern void
WasmEdge_HostFunctionDelete(WasmEdge_HostFunctionContext *Cxt);
WASMEDGE_CAPI_EXPORT extern WasmEdge_TableInstanceContext *
WasmEdge_TableInstanceCreate(const enum WasmEdge_RefType RefType,
                             const WasmEdge_Limit Limit);
WASMEDGE_CAPI_EXPORT extern enum WasmEdge_RefType
WasmEdge_TableInstanceGetRefType(const WasmEdge_TableInstanceContext *Cxt);
WASMEDGE_CAPI_EXPORT extern WasmEdge_Result
WasmEdge_TableInstanceGetData(const WasmEdge_TableInstanceContext *Cxt,
                              WasmEdge_Value *Data, const uint32_t Offset);
WASMEDGE_CAPI_EXPORT extern WasmEdge_Result
WasmEdge_TableInstanceSetData(WasmEdge_TableInstanceContext *Cxt,
                              WasmEdge_Value Data, const uint32_t Offset);
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_TableInstanceGetSize(const WasmEdge_TableInstanceContext *Cxt);
WASMEDGE_CAPI_EXPORT extern WasmEdge_Result
WasmEdge_TableInstanceGrow(WasmEdge_TableInstanceContext *Cxt,
                           const uint32_t Size);
WASMEDGE_CAPI_EXPORT extern void
WasmEdge_TableInstanceDelete(WasmEdge_TableInstanceContext *Cxt);
WASMEDGE_CAPI_EXPORT extern WasmEdge_ImportObjectContext *
WasmEdge_ImportObjectCreate(const WasmEdge_String ModuleName, void *Data);