bindings/rust/wasmedge-sys/docs/wasmedge.rs

extern "C" {
    #[doc = " Get the function type context of the function instance."]
    #[doc = ""]
    #[doc = " The function type context links to the function type in the function"]
    #[doc = " instance context and owned by the context. The caller should __NOT__ call"]
    #[doc = " the `WasmEdge_FunctionTypeDelete`."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_FunctionInstanceContext."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_FunctionInstanceGetFunctionType(
        Cxt: *const WasmEdge_FunctionInstanceContext,
    ) -> *const WasmEdge_FunctionTypeContext;
}
#[doc = " >>>>>>>> WasmEdge host function functions >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>"]
pub type WasmEdge_HostFunc_t = ::std::option::Option<
    unsafe extern "C" fn(
        Data: *mut ::std::os::raw::c_void,
        MemCxt: *mut WasmEdge_MemoryInstanceContext,
        Params: *const WasmEdge_Value,
        Returns: *mut WasmEdge_Value,
    ) -> WasmEdge_Result,
>;
extern "C" {
    #[doc = " Creation of the WasmEdge_HostFunctionContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_HostFunctionDelete` to"]
    #[doc = " free it if the returned object is not added into a"]
    #[doc = " `WasmEdge_ImportObjectContext`. The following is an example to create a host"]
    #[doc = " function context."]
    #[doc = " ```c"]
    #[doc = " WasmEdge_Result FuncAdd(void *Data, WasmEdge_MemoryInstanceContext *MemCxt,"]
    #[doc = "                     const WasmEdge_Value *In, WasmEdge_Value *Out) {"]
    #[doc = "   /// Function to return A + B."]
    #[doc = "   int32_t A = WasmEdge_ValueGetI32(In[0]);"]
    #[doc = "   int32_t B = WasmEdge_ValueGetI32(In[1]);"]
    #[doc = "   Out[0] = WasmEdge_ValueGenI32(A + B);"]
    #[doc = "   /// Return execution status"]
    #[doc = "   return WasmEdge_Result_Success;"]
    #[doc = " }"]
    #[doc = ""]
    #[doc = " enum WasmEdge_ValType Params[2] = {WasmEdge_ValType_I32,"]
    #[doc = " WasmEdge_ValType_I32}; enum WasmEdge_ValType Returns[1] ="]
    #[doc = " {WasmEdge_ValType_I32}; WasmEdge_FunctionTypeContext *FuncType ="]
    #[doc = "     WasmEdge_FunctionTypeCreate(Params, 2, Returns, 1);"]
    #[doc = " WasmEdge_HostFunctionContext *HostFunc ="]
    #[doc = "     WasmEdge_HostFunctionCreate(FuncType, FuncAdd, 0);"]
    #[doc = " WasmEdge_FunctionTypeDelete(FuncType);"]
    #[doc = " ..."]
    #[doc = " ```"]
    #[doc = ""]
    #[doc = " \\param Type the function type context to describe the host function"]
    #[doc = " signature."]
    #[doc = " \\param HostFunc the host function pointer. The host function signature must"]
    #[doc = " be as following:"]
    #[doc = " ```c"]
    #[doc = " typedef WasmEdge_Result (*WasmEdge_HostFunc_t)("]
    #[doc = "     void *Data,"]
    #[doc = "     WasmEdge_MemoryInstanceContext *MemCxt,"]
    #[doc = "     const WasmEdge_Value *Params,"]
    #[doc = "     WasmEdge_Value *Returns);"]
    #[doc = " ```"]
    #[doc = " The `Data` is the pointer to the data passed into the import object through"]
    #[doc = " `WasmEdge_ImportObjectCreate()`. The `Params` is the input parameters array"]
    #[doc = " with length guaranteed to be the same as the parameter types in the `Type`."]
    #[doc = " The `Returns` is the output results array with length guaranteed to be the"]
    #[doc = " same as the result types in the `Type`. The return value is"]
    #[doc = " `WasmEdge_Result` for the execution status."]
    #[doc = " \\param Cost the function cost in statistics. Pass 0 if the calculation is"]
    #[doc = " not needed."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_HostFunctionCreate(
        Type: *const WasmEdge_FunctionTypeContext,
        HostFunc: WasmEdge_HostFunc_t,
        Cost: u64,
    ) -> *mut WasmEdge_HostFunctionContext;
}
pub type WasmEdge_WrapFunc_t = ::std::option::Option<
    unsafe extern "C" fn(
        This: *mut ::std::os::raw::c_void,
        Data: *mut ::std::os::raw::c_void,
        MemCxt: *mut WasmEdge_MemoryInstanceContext,
        Params: *const WasmEdge_Value,
        ParamLen: u32,
        Returns: *mut WasmEdge_Value,
        ReturnLen: u32,
    ) -> WasmEdge_Result,
>;
extern "C" {
    #[doc = " Creation of the WasmEdge_HostFunctionContext."]
    #[doc = ""]
    #[doc = " This function is for the languages which cannot pass the function pointer of"]
    #[doc = " the host function into this shared library directly. The caller owns the"]
    #[doc = " object and should call `WasmEdge_HostFunctionDelete` to free it if the"]
    #[doc = " returned object is not added into a `WasmEdge_ImportObjectContext`. The"]
    #[doc = " following is an example to create a host function context for other"]
    #[doc = " languages."]
    #[doc = " ```c"]
    #[doc = " /// `RealFunc` is the pointer to the function in other languages."]
    #[doc = ""]
    #[doc = " WasmEdge_Result FuncAddWrap(void *This, void *Data,"]
    #[doc = "                             WasmEdge_MemoryInstanceContext *MemCxt,"]
    #[doc = "                             const WasmEdge_Value *In, const uint32_t InLen,"]
    #[doc = "                             WasmEdge_Value *Out, const uint32_t OutLen) {"]
    #[doc = "   /// Wrapper function of host function to return A + B."]
    #[doc = ""]
    #[doc = "   /// `This` is the same as `RealFunc`."]
    #[doc = "   int32_t A = WasmEdge_ValueGetI32(In[0]);"]
    #[doc = "   int32_t B = WasmEdge_ValueGetI32(In[1]);"]
    #[doc = ""]
    #[doc = "   /// Call the function of `This` in the host language ..."]
    #[doc = "   int32_t Result = ...;"]
    #[doc = ""]
    #[doc = "   Out[0] = Result;"]
    #[doc = "   /// Return the execution status"]
    #[doc = "   return WasmEdge_Result_Success;"]
    #[doc = " }"]
    #[doc = ""]
    #[doc = " enum WasmEdge_ValType Params[2] ="]
    #[doc = "     { WasmEdge_ValType_I32, WasmEdge_ValType_I32 };"]
    #[doc = " enum WasmEdge_ValType Returns[1] = { WasmEdge_ValType_I32 };"]
    #[doc = " WasmEdge_FunctionTypeContext *FuncType ="]
    #[doc = "     WasmEdge_FunctionTypeCreate(Params, 2, Returns, 1);"]
    #[doc = " WasmEdge_HostFunctionContext *HostFunc ="]
    #[doc = "     WasmEdge_HostFunctionCreateBinding(FuncType, FuncAddWrap, RealFunc, 0);"]
    #[doc = " WasmEdge_FunctionTypeDelete(FuncType);"]
    #[doc = " ..."]
    #[doc = " ```"]
    #[doc = ""]
    #[doc = " \\param Type the function type context to describe the host function"]
    #[doc = " signature."]
    #[doc = " \\param WrapFunc the wrapper function pointer. The wrapper function signature"]
    #[doc = " must be as following:"]
    #[doc = " ```c"]
    #[doc = " typedef WasmEdge_Result (*WasmEdge_WrapFunc_t)("]
    #[doc = "     void *This,"]
    #[doc = "     void *Data,"]
    #[doc = "     WasmEdge_MemoryInstanceContext *MemCxt,"]
    #[doc = "     const WasmEdge_Value *Params,"]
    #[doc = "     const uint32_t ParamLen,"]
    #[doc = "     WasmEdge_Value *Returns,"]
    #[doc = "     const uint32_t ReturnLen);"]
    #[doc = " ```"]
    #[doc = " The `This` is the pointer the same as the `Binding` parameter of this"]
    #[doc = " function. The `Data` is the pointer to the data passed into the import"]
    #[doc = " object through `WasmEdge_ImportObjectCreate()`. The `Params` is the input"]
    #[doc = " parameters array with length guaranteed to be the same as the parameter"]
    #[doc = " types in the `Type`, and the `ParamLen` is the length of the array. The"]
    #[doc = " `Returns` is the output results array with length guaranteed to be the same"]
    #[doc = " as the result types in the `Type`, and the `ReturnLen` is the length of the"]
    #[doc = " array. The return value is `WasmEdge_Result` for the execution status."]
    #[doc = " \\param Binding the `this` pointer of the host function target or the"]
    #[doc = " function indexing maintained by the caller which can specify the host"]
    #[doc = " function. When invoking the host function, this pointer will be the first"]
    #[doc = " argument of the wrapper function."]
    #[doc = " \\param Cost the function cost in statistics. Pass 0 if the calculation is"]
    #[doc = " not needed."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_HostFunctionCreateBinding(
        Type: *const WasmEdge_FunctionTypeContext,
        WrapFunc: WasmEdge_WrapFunc_t,
        Binding: *mut ::std::os::raw::c_void,
        Cost: u64,
    ) -> *mut WasmEdge_HostFunctionContext;
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_HostFunctionContext."]
    #[doc = ""]
    #[doc = " After calling this function, the context will be freed and should __NOT__ be"]
    #[doc = " used."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_HostFunctionContext to delete."]
    pub fn WasmEdge_HostFunctionDelete(Cxt: *mut WasmEdge_HostFunctionContext);
}
extern "C" {
    #[doc = " Creation of the WasmEdge_TableInstanceContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_TableInstanceDelete` to"]
    #[doc = " free it."]
    #[doc = ""]
    #[doc = " \\param RefType the reference type of the table instance context."]
    #[doc = " \\param Limit the limit struct to initialize the table instance context."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_TableInstanceCreate(
        RefType: WasmEdge_RefType,
        Limit: WasmEdge_Limit,
    ) -> *mut WasmEdge_TableInstanceContext;
}
extern "C" {
    #[doc = " Get the reference type from a table instance."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_TableInstanceContext."]
    #[doc = ""]
    #[doc = " \\returns the reference type of the table instance."]
    pub fn WasmEdge_TableInstanceGetRefType(
        Cxt: *const WasmEdge_TableInstanceContext,
    ) -> WasmEdge_RefType;
}
extern "C" {
    #[doc = " Get the reference value in a table instance."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_TableInstanceContext."]
    #[doc = " \\param [out] Data the result reference value."]
    #[doc = " \\param Offset the reference value offset (index) in the table instance."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_TableInstanceGetData(
        Cxt: *const WasmEdge_TableInstanceContext,
        Data: *mut WasmEdge_Value,
        Offset: u32,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Set the reference value into a table instance."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_TableInstanceContext."]
    #[doc = " \\param Data the reference value to set into the table instance."]
    #[doc = " \\param Offset the reference value offset (index) in the table instance."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_TableInstanceSetData(
        Cxt: *mut WasmEdge_TableInstanceContext,
        Data: WasmEdge_Value,
        Offset: u32,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Get the size of a table instance."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_TableInstanceContext."]
    #[doc = ""]
    #[doc = " \\returns the size of the table instance."]
    pub fn WasmEdge_TableInstanceGetSize(Cxt: *const WasmEdge_TableInstanceContext) -> u32;
}
extern "C" {
    #[doc = " Grow a table instance with a size."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_TableInstanceContext."]
    #[doc = " \\param Size the count of reference values to grow in the table instance."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_TableInstanceGrow(
        Cxt: *mut WasmEdge_TableInstanceContext,
        Size: u32,
    ) -> WasmEdge_Result;
}
